now using background-image of video before playing instead of thumbnail-img div: stretching issues solved;

--- a/css/player.css
+++ b/css/player.css
@@ -64,11 +64,13 @@ body[data-mobile=true] .video-controls-container::before {
   .video-wrapper {
     width: 100%;
   }
-  .thumbnail-img,
   video {
     width: 100%;
     max-height: 100vh;
     border-radius: 10px;
+    height: 100%;
+    background-position: center;
+    background-size: cover;
   }
   
   .video-controls-container {
@@ -398,6 +400,7 @@ body[data-mobile=true] .video-controls-container::before {
   }
   
   .thumbnail-wrapper {
+    display: none;
     position: absolute;
     top: 0;
     /* top: 50%; */
@@ -415,8 +418,8 @@ body[data-mobile=true] .video-controls-container::before {
     z-index: 1;
   }
   /* When video element has a src, make thumbnail display none */
-  .video-container.src-loaded .thumbnail-img {
-    display: none;
+  .video-container.src-loaded video {
+    background-image: none!important;
   }
   
   /* .video-container.scrubbing .thumbnail-img {
